# OpenGL_Learnings

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake-build.yml  cmake-windows-build.yml
cmake/: BuildConfig.cmake  GlobalDefines.cmake
include/: App.hpp  AssetsManager.hpp  Delegates.h  Logging.h  Random.h  Renderer.hpp  ShaderProgram.hpp  SlidingSprite.hpp  Sprite.hpp  SpritePixelization.hpp
include/Rendering/: CommonTemplates.hpp  GlmTypeTraits.hpp  GlmTypeTraits_Uniform.hpp  GlmTypeTraits_VertexAttribute.hpp  Object.hpp  Renderer.hpp  ShaderProgram.hpp  ShaderUniformsDescriptor.hpp  TShaderUniformsDescriptor.hpp  TVertexArrayObject.hpp  TVertexArrayObjectHandler.hpp  TVertexAttributesHandler.hpp  TypeTraits_Uniform.hpp  TypeTraits_VertexAttribute.hpp
shaders/: fragment.glsl  fragment_pixelating.glsl  fragment_red.glsl  fragment_screen.glsl  vertex.glsl  vertex_screen.glsl
src/: App.cpp  AssetsManager.cpp  Random.cpp  Renderer.cpp  ShaderProgram.cpp  SlidingSprite.cpp  Sprite.cpp  SpritePixelization.cpp
src/Rendering/: Object.cpp  Renderer.cpp  ShaderProgram.cpp
